[frontend] Update project structure, change TypedHeader to Header, prepare for PWA installation screen

--- a/frontend/src/shared/locales/de.json
+++ b/frontend/src/shared/locales/de.json
@@ -2,7 +2,8 @@
   "Tabs": {
     "Explore": "Entdecken",
     "RecipeOfTheDay": "Rezept des Tages",
-    "Favorites": "Favoriten"
+    "Favorites": "Favoriten",
+    "InstallPWA": "Installiere die App"
   },
   "General": {
     "Recipe": "Rezept | Rezepte",
