[client] Improve UI and fix linting errors

--- a/client/src/shared/locales/de.json
+++ b/client/src/shared/locales/de.json
@@ -30,7 +30,7 @@
   },
   "Suggestions": {
     "Title": "Entdecke;neue Rezepte",
-    "SearchbarPrompt": "Nach welchen Zutaten oder Rezepten sehnst du dich heute?",
+    "SearchbarPrompt": "Suche nach Rezepten und Zutaten",
     "Preferences": {
       "Title": "Lege deine Präferenzen fest",
       "Subtitle": "Filtere nach Zutaten, Kochzeit, Preis und mehr.",
