--- a/client/src/shared/locales/de.json
+++ b/client/src/shared/locales/de.json
@@ -16,8 +16,8 @@
   "Recipe": {
     "Src": {
       "By": "Von",
-      "RecipeBy": "Rezept von",
-      "From": "von"
+      "RecipeBy": "Rezept von {0}",
+      "RecipeByWithUrl": "Rezept von {0} ({1})"
     },
     "Serving": "Portion | Portionen",
     "Direction": "Schritt | Schritte",
