Update welcome text in locales

--- a/client/src/shared/locales/de.json
+++ b/client/src/shared/locales/de.json
@@ -4,7 +4,7 @@
     "NoRecipesSaved": "Du hast noch keine Rezepte favorisiert."
   },
   "General": {
-    "WelcomeText": "Schön,; dass du da bist! 🍻",
+    "WelcomeText": "Lass uns;zusammen kochen ♥️",
     "Recipe": "Rezept | Rezepte",
     "Item": "Zutat | Zutaten",
     "Tag": "Stichwort | Stichwörter",
