Update UI and improve overall UX and maintainability

--- a/client/src/shared/locales/de.json
+++ b/client/src/shared/locales/de.json
@@ -23,6 +23,8 @@
     },
     "Serving": "Portion | Portionen",
     "Direction": "Schritt | Schritte",
+    "Preparation": "Zubereitung",
+    "Step": "Schritt",
     "Ingredient": "Zutat | Zutaten",
     "GoodAppetite": "Guten Appetit!",
     "NotFound": {
