--- a/client/src/shared/locales/de.json
+++ b/client/src/shared/locales/de.json
@@ -21,6 +21,7 @@
       "RecipeBy": "Rezept von {0}",
       "RecipeByWithUrl": "Rezept von {0} ({1})"
     },
+    "LetsCook": "Lass uns kochen!",
     "Serving": "Portion | Portionen",
     "Direction": "Schritt | Schritte",
     "Preparation": "Zubereitung",
