--- a/client/src/shared/locales/en.json
+++ b/client/src/shared/locales/en.json
@@ -21,6 +21,7 @@
       "RecipeBy": "Recipe by {0}",
       "RecipeByWithUrl": "Recipe by {0} ({1})"
     },
+    "LetsCook": "Let's cook!",
     "Serving": "Serving | Servings",
     "Direction": "Instruction | Instructions",
     "Preparation": "Preparation",
