Update client to be compatible with new server

--- a/client/src/shared/locales/en.json
+++ b/client/src/shared/locales/en.json
@@ -59,7 +59,7 @@
     "ShowPassword": "Show password"
   },
   "Suggestions": {
-    "Title": "Discover;new recipes",
+    "Title": "Let's cook;something delicious!",
     "Subtitle": "Hey Buddy!",
     "SearchbarPrompt": "Search Recipes and Ingredients",
     "Preferences": {
