Improve search capabilities, include language tag and (re)move some files

--- a/client/src/shared/locales/de.json
+++ b/client/src/shared/locales/de.json
@@ -11,7 +11,7 @@
     "ReadMore": "Mehr lesen",
     "ReadLess": "Weniger lesen"
   },
-  "Locale": {
+  "Locales": {
     "en-US": "Englisch",
     "de": "Deutsch",
     "it": "Italienisch"
