--- a/client/src/shared/locales/en-US.json
+++ b/client/src/shared/locales/en-US.json
@@ -4,7 +4,7 @@
     "NoRecipesSaved": "You have no saved recipes yet."
   },
   "General": {
-    "WelcomeText": "Let's cook something delicious ♥️!",
+    "WelcomeText": "Let's cook;something delicious ♥️!",
     "Recipe": "Recipe | Recipes",
     "Item": "Item | Items",
     "Tag": "Tag | Tags",
